# amplihack

./: .agent_state.json  .dockerignore  .env.example  .env.passthrough.example  .env.security-template  .ggignore  .gitattributes  .gitguardian.yaml  .gitguardian.yml  .github.copilot.env  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config-copilot-sync.yaml  .pre-commit-config.yaml  .prettierrc.json  .secrets.baseline  .test.env  404.html  =5.15.0  ACTUAL_TEST_RESULTS.md  AGENTS.md  AMPLIHACK.md  API_DESIGN_DECISIONS.md  ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  ASPIRE_SKILL_TEST_SUMMARY.md  AUTO_MODE.md  AUTO_VERSION_CODE_REVIEW.md  AZURE_INTEGRATION.md  BENCHMARK_VERIFICATION.md  BLARIFY_FIX_SUMMARY.md  BLARIFY_INTEGRATION_COMPLETE.md  BLARIFY_VALIDATION_RESULTS.md  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.txt  CODE_REVIEW_CONTEXT_REFACTORING.md  (+414 more)
.amplihack/: kuzu_db
.claude/: .version  AMPLIHACK.md  DECISION_QUICK_REFERENCE.md  config.json  settings.json  settings.json.backup.uvx
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: OPTIMIZING_FOR_CODESPACES.md  POST_SETUP_README.md  devcontainer.json  post-create.sh
.github/: PM_WORKFLOWS_SETUP.md  SYNC_README.md  copilot-instructions.md  mcp-servers.json  root-hygiene-config.yml
.pm/: config.yaml  roadmap.md  sources.yaml
AGENT_MEMORY_INTEGRATION/: index.html
AGENT_MEMORY_QUICKSTART/: index.html
AUTOMODE_SAFETY/: index.html
AUTO_MODE/: index.html
AZURE_INTEGRATION/: index.html
BENCHMARKING/: index.html
CHANGELOG_v0.9.1/: index.html
CLAUDE_CODE_SETUP/: index.html
CODE_REVIEW/: index.html
COPILOT_CLI/: index.html
COPILOT_CLI_INTEGRATION_SUMMARY/: index.html
CREATE_YOUR_OWN_TOOLS/: index.html
DEVELOPING_AMPLIHACK/: index.html
DISCOVERIES/: index.html
DOCUMENTATION_GUIDELINES/: index.html
EVAL_GRADING_IMPROVEMENTS/: index.html
EVAL_RETRIEVAL_REFERENCE/: index.html
EVAL_SYSTEM_ARCHITECTURE/: index.html
FLEET_COPILOT/: index.html
GOAL_AGENT_GENERATOR_GUIDE/: index.html
GOAL_AGENT_GENERATOR_PRESENTATION/: index.html
GOAL_SEEKING_AGENTS/: index.html
HOOKS_COMPARISON/: index.html
HOOK_CONFIGURATION_GUIDE/: index.html
IMPLEMENTATION_SUMMARY/: index.html
INTERACTIVE_INSTALLATION/: index.html
INVESTIGATION_hive_mind_guide/: index.html
KUZU_TEST_CONFIGURATION/: index.html
LADYBUG_MIGRATION_GUIDE/: index.html
MIGRATION_GUIDE/: index.html
NATIVE_BINARY_TRACE_LOGGING/: index.html
OPENAI_RESPONSES_API/: index.html
OXIDIZER/: index.html
PASSTHROUGH_MODE/: index.html
PHILOSOPHY/: index.html
PLUGIN_ARCHITECTURE/: index.html
PLUGIN_CLI_HELP/: index.html
PLUGIN_DOCUMENTATION_INDEX/: index.html
PREREQUISITES/: index.html
PROFILE_MANAGEMENT/: index.html
PROXY_CONFIG_GUIDE/: index.html
README_PLUGIN_SECTION/: index.html
RECIPE_RESILIENCE/: index.html
RETCON_DOCUMENTATION_SUMMARY/: index.html
SDK_ADAPTERS_GUIDE/: index.html
SECURITY_CONTEXT_PRESERVATION/: index.html
SECURITY_RECOMMENDATIONS/: index.html
SHELL_COMMAND_HOOK/: index.html
Specs/: 5-type-memory-architecture-review.md  5-type-memory-architecture.md  5-type-memory-implementation-plan.md  AGENT_EVALUATION_METHODS.md  ALL_PRS_READY_FOR_TESTING.md  ATOMIC_DELIVERY_PLAN.md  AUTO_MODE_TRANSPARENCY_ANALYSIS.md  AUTO_MODE_TRANSPARENCY_DESIGNS.md  AdaptiveHookSystem.md  AgentMirroringSystem.md  AutoModeUI_Architecture.md  BACKWARD_COMPATIBILITY.md  COGNITIVE_MEMORY_ARCHITECTURE.md  CONTINUOUS_IMPROVEMENT_PLAN.md  CROSS_TOOL_COMPATIBILITY.md  ConfigConflictHandling.md  ConfigConflictHandling_Architecture.md  ConfigConflictHandling_BuilderChecklist.md  ConfigConflictHandling_ImplementationGuide.md  ConfigConflictHandling_SUMMARY.md  DOCUMENTATION_UPDATES.md  DOMAIN_AGENTS_DESIGN.md  DraftThingsWeKnowWeWant.md  EVAL_IMPROVEMENT_REPORT.md  EXTENSIBILITY_ARCHITECTURE_V3.md  GitHubCopilot.md  HOOK_REGISTRATION_AUDIT.md  IMPLEMENTATION_PLAN.md  (+78 more)
amplifier-bundle/modules/hook-recipe-tracker/: pyproject.toml
amplifier-bundle/modules/hook-recipe-tracker/amplifier_hook_recipe_tracker/: __init__.py  tracker.py
amplifier-bundle/modules/hook-tool-gate/: pyproject.toml
amplifier-bundle/modules/hook-tool-gate/amplifier_hook_tool_gate/: __init__.py  gate.py  overrides.py
amplihack-logparse/: ANALYZER_IMPLEMENTATION.md  Cargo.toml
amplihack-logparse/.claude/data/azure_aks_expert/: HowToUseTheseFiles.md  KeyInfo.md  Knowledge.md
amplihack-logparse/.claude/data/rust_focused_for_log_parser/: HowToUseTheseFiles.md  KeyInfo.md  Knowledge.md
amplihack-logparse/benches/: parser_bench.rs
amplihack-logparse/examples/: analyzer_usage.rs
amplihack-logparse/src/: error.rs  main.rs  types.rs
amplihack-logparse/src/analyzer/: README.md  mod.rs
amplihack-logparse/src/parser/: mod.rs
modules/hook-agent-memory/: README.md  pyproject.toml
modules/hook-agent-memory/amplifier_hook_agent_memory/: __init__.py  detector.py  hook.py  injector.py
modules/hook-power-steering/: README.md  pyproject.toml
modules/hook-power-steering/amplifier_hook_power_steering/: __init__.py  checker.py  considerations.yaml  heuristics.py  hook.py  state.py
modules/hook-xpia-defense/: README.md  pyproject.toml
modules/hook-xpia-defense/amplifier_hook_xpia_defense/: __init__.py  xpia_hook.py
modules/hook-xpia-defense/tests/: conftest.py  run_tests.py  test_xpia_hook.py
modules/tool-goal-agent-generator/: README.md  pyproject.toml
modules/tool-goal-agent-generator/src/tool_goal_agent_generator/: __init__.py  agent_assembler.py  cli.py  models.py  objective_planner.py  packager.py  prompt_analyzer.py  skill_synthesizer.py  tool.py
modules/tool-lock/: README.md  pyproject.toml
modules/tool-lock/amplifier_tool_lock/: __init__.py  lock_tool.py
modules/tool-session-utils/: README.md  pyproject.toml
modules/tool-session-utils/amplifier_tool_session_utils/: __init__.py  append_handler.py  fork_manager.py  tool.py
modules/tool-workflow/: README.md  pyproject.toml
modules/tool-workflow/amplifier_tool_workflow/: __init__.py  tool.py  tracker.py  transcript.py
(+6778 files in other folders)
