[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "build_hooks"
backend-path = ["."]

[project]
name = "amplihack"
version = "0.2.0"
description = "Amplifier bundle for agentic coding with comprehensive skills, recipes, and workflows"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.0.0",
    "requests>=2.25.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "aiohttp>=3.8.0",
    "litellm>=1.0.0",
    "python-dotenv>=0.19.0",

    "claude-agent-sdk>=0.1.0", # Claude Python Agent SDK for auto mode streaming
    "rich>=13.0.0", # Required for --ui interactive TUI mode
    "neo4j>=5.15.0,<6.0.0", # Neo4j driver for memory system
    "blarify>=1.3.0", # Code understanding engine for indexing codebases
    "azure-identity>=1.12.0", # Azure Service Principal authentication for remote execution
    "kuzu>=0.11.0", # Embedded graph database for memory system
]

[project.optional-dependencies]
# When running as an Amplifier bundle, hook modules need amplifier-core
amplifier = [
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core@main",
]
ui = [
    "rich>=13.0.0",  # Required for --ui interactive TUI mode
]
tui-testing = [
    "pytest-asyncio>=0.21.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "build>=1.0.0",  # Required for test_uvx_packaging.py
    "pre-commit",
    "rich>=13.0.0",  # Include Rich in dev dependencies for TUI development
]

[project.scripts]
amplihack = "amplihack:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["amplihack*"]

[tool.setuptools.package-data]
# Include prompts and framework files
# .claude/, .claude-plugin/, and amplifier-bundle/ are copied into package by build_hooks.py before wheel build
amplihack = [
    "prompts/*.md",
    "utils/uvx_settings_template.json",
    ".claude/**/*",
    ".claude/**/.gitkeep",
    ".claude/**/.*",  # Include hidden files like .version (.claude/AMPLIHACK.md now included via .claude/**/* )
    ".claude-plugin/**/*",  # Plugin manifest
    "amplifier-bundle/**/*",
    "amplifier-bundle/**/.gitkeep",
]

[tool.ruff]
# Essential Ruff settings only
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]  # Basic errors, warnings, pyflakes, isort
ignore = ["E501", "E402"]  # Line too long - handled by formatter, Module level import not at top of file

[tool.pyright]
# Essential Pyright settings only
pythonVersion = "3.11"
typeCheckingMode = "standard"
exclude = [
    "**/__pycache__",
    "**/venv",
    "**/.venv",
    "tests/**",
    "examples/**/*.py",  # Example/demo code may have missing dependencies
    ".claude/tools/test-utilities/**/*.py",  # Test utilities with missing dependencies
    "scripts/**/*.py",  # Exclude scripts from type checking
    "src/amplihack/.claude/tools/amplihack/memory/tests/test_interface.py",  # TDD tests - expected to fail
    "Specs/xpia_defense_interface.py",  # Example/demo code with intentional type issues
    "Specs/xpia_usage_examples.py",     # Example/demo code with intentional type issues
    "src/amplihack/security/cli.py",    # CLI dependencies not available in CI
]

[tool.pytest.ini_options]
# Pytest configuration
asyncio_mode = "auto"
testpaths = ["tests", "src"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
# Add src directory to Python path for module discovery
pythonpath = ["src"]
# Exclude standalone test scripts from collection
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "e2e: marks tests as end-to-end tests",
    "tui: marks tests as TUI/interactive tests",
    "gadugi: marks tests as requiring gadugi-agentic-test",
    "slow_tui: marks tests as slow TUI tests (takes >30 seconds)",
    "asyncio: marks tests as async tests",
    "neo4j: marks tests as Neo4j memory system tests",
    "requires_docker: marks tests as requiring Docker daemon",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
