[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-hook-power-steering"
version = "0.1.0"
description = "Power Steering hook for Amplifier - autonomous session completion verification"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Amplifier Team" }
]
keywords = ["amplifier", "hook", "power-steering", "session-verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.entry-points."amplifier.hooks"]
power_steering = "amplifier_hook_power_steering:PowerSteeringHook"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_hook_power_steering"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
