[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-tool-session-utils"
version = "0.1.0"
description = "Session utilities tool for Amplifier - fork management and instruction appending"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Amplifier Team" }
]
keywords = ["amplifier", "tool", "session", "fork", "append"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.entry-points."amplifier.tools"]
session_utils = "amplifier_tool_session_utils:SessionUtilsTool"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_tool_session_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
