[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-tool-workflow"
version = "0.1.0"
description = "Workflow tracking and transcript management tool for Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Amplifier Team" }
]
keywords = ["amplifier", "tool", "workflow", "transcript", "tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.entry-points."amplifier.tools"]
workflow = "amplifier_tool_workflow:WorkflowTool"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_tool_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
