[project]
name = "amplifier-hook-recipe-tracker"
version = "0.1.0"
description = "Recipe session tracking for workflow enforcement"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_hook_recipe_tracker"]
